--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
 
-        <img src="./imagens/perfil.png" alt="">
+        <img src="imagens/perfil.png" alt="">
 
         <form action="">
             <div>
